hetzner-k8s-01/base/networking/dns-manager/external-dns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
