hetzner-k8s-01/base/networking/dns-manager/kuard-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: default
  labels:
    app: kuard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - name: kuard
          image: harbor.hachmann.hamburg/kuard/kuard-arm64:blue
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthy
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: kuard
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kuard.hachmann.hamburg
      secretName: kuard-tls
  rules:
    - host: kuard.hachmann.hamburg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 80
